--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="image/zoro-modified.png" alt="yash profile pic"></td>
+      <td><img src="yash.image.jpeg" alt="yash profile pic"></td>
       <td><h1>yashwanth❤</h1>
       <p><em>I'm student at</em> <strong><a href="https://mlrit.ac.in/" alt="mlr site">MLR institution of technology</strong></a>
       <p>and A learner by my self</p>
