--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <td><h1>yashwanth❤</h1>
       <p><em>I'm student at</em> <strong><a href="https://mlrit.ac.in/" alt="mlr site">MLR institution of technology</strong></a>
       <p>and A learner by my self</p>
-      <p>my self yashwanth and im studing in 3rd of mlr and my hobes are reading books and bilding websites,apps through html,css,javascript,and mangodb...</p></td>
+      <p>my self yashwanth and im studing in 3rd of mlr and my hobbies are reading books and building websites,apps through html,css,javascript,and mangodb...</p></td>
     </tr>
   </table>
 
